--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.15.2",
+    "express": "^4.17.1",
+    "google-auth-library": "^5.5.1",
     "pg": "^7.12.1"
   },
   "devDependencies": {
-    "request": "^2.81.0",
+    "request": "^2.88.0",
     "tape": "^4.7.0"
   },
   "repository": {
